--- a/views/kanban.html
+++ b/views/kanban.html
@@ -105,7 +105,7 @@
         </div>
       </md-dialog-content>
       <div class="md-actions" layout="row">
-        <md-button ng-click="answer()">
+        <md-button class="md-raised md-primary" ng-click="answer()">
           OK
         </md-button>
       </div>
