--- a/views/register.html
+++ b/views/register.html
@@ -3,7 +3,7 @@
   <md-card id="loginbox">
     <md-toolbar>
       <div class="md-toolbar-tools" layout-align="center center">
-        <h2>Login</h2>
+        <h2>Register</h2>
       </div>
     </md-toolbar>
     <md-card-content>
@@ -21,10 +21,10 @@
           </md-input-container>
         </md-content>
         <div class="md-actions" layout="row" layout-align="end">
-          <md-button class="md-primary" ng-click="register()">
+          <md-button class="md-raised md-primary" ng-click="login()">
             Sign Up
           </md-button>
-          <md-button class="md-raised md-primary" ng-click="login()">
+          <md-button class="md-primary" ng-click="goBackLogin()">
             Sign In
           </md-button>
         </div>
