--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,31 @@ md-whiteframe {
   border-radius: 5px;
 }
 
-#loginlayout {
-  height:100%;
-  background-color: rgba(96, 125, 139, 0.14);
+.container {
+  overflow: hidden;
 }
 
-#loginbox {
+.loginlayout {
+  position: fixed;
+  left:0;
+  top: 0;
+  background-image: url("https://i.ytimg.com/vi/HsJoLvRbri0/maxresdefault.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  transform: scale(1.1);
+}
+
+.loginbox {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
   margin: 12px;
   border-radius: 5px;
