--- a/views/register.html
+++ b/views/register.html
@@ -1,34 +1,34 @@
-<!-- Login form -->
-<div id="loginlayout" layout="column" layout-align="center center" ng-cloak>
-  <md-card id="loginbox">
-    <md-toolbar>
-      <div class="md-toolbar-tools" layout-align="center center">
-        <h2>Register</h2>
-      </div>
-    </md-toolbar>
-    <md-card-content>
-      <form>
-        <md-content layout-padding layout="column" class="autoScroll">
-          <md-input-container layout="row">
-            <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-            <label>Username</label>
-            <input type="text">
-          </md-input-container>
-          <md-input-container layout="row">
-            <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
-            <label>Password</label>
-            <input type="password">
-          </md-input-container>
-        </md-content>
-        <div class="md-actions" layout="row" layout-align="end">
-          <md-button class="md-raised md-primary" ng-click="login()">
-            Sign Up
-          </md-button>
-          <md-button class="md-primary" ng-click="goBackLogin()">
-            Sign In
-          </md-button>
-        </div>
-      </form>
-    </md-card-content>
-  </md-card>
+<div class="loginlayout" layout="column" layout-align="center center" ng-cloak>
 </div>
+<!-- Login form -->
+<md-card class="loginbox">
+  <md-toolbar>
+    <div class="md-toolbar-tools" layout-align="center center">
+      <h2>Register</h2>
+    </div>
+  </md-toolbar>
+  <md-card-content>
+    <form>
+      <md-content layout-padding layout="column" class="autoScroll">
+        <md-input-container layout="row">
+          <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
+          <label>Username</label>
+          <input type="text">
+        </md-input-container>
+        <md-input-container layout="row">
+          <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
+          <label>Password</label>
+          <input type="password">
+        </md-input-container>
+      </md-content>
+      <div class="md-actions" layout="row" layout-align="end">
+        <md-button class="md-raised md-primary" ng-click="login()">
+          Sign Up
+        </md-button>
+        <md-button class="md-primary" ng-click="goBackLogin()">
+          Sign In
+        </md-button>
+      </div>
+    </form>
+  </md-card-content>
+</md-card>
