--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 </div>
 <!-- Login form -->
 <md-card class="loginbox">
-  <md-toolbar>
+  <md-toolbar class="logintoolbar">
     <div class="md-toolbar-tools" layout-align="center center">
       <h2>Login</h2>
     </div>
