--- a/views/login.html
+++ b/views/login.html
@@ -9,16 +9,14 @@
   </md-toolbar>
   <md-card-content>
     <form>
-      <md-content layout-padding layout="column" class="autoScroll">
-        <md-input-container layout="row">
+      <md-content>
+        <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-          <label>Username</label>
-          <input type="text">
+          <input type="text" placeholder="Username">
         </md-input-container>
-        <md-input-container layout="row">
+        <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
-          <label>Password</label>
-          <input type="password">
+          <input type="password" placeholder="Password">
         </md-input-container>
       </md-content>
       <div class="md-actions" layout="row" layout-align="end">
