--- a/views/login.html
+++ b/views/login.html
@@ -8,22 +8,22 @@
     </div>
   </md-toolbar>
   <md-card-content>
-    <form>
+    <form method="post">
       <md-content>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-          <input type="text" placeholder="Username">
+          <input type="text" placeholder="Username" ng-model="username">
         </md-input-container>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
-          <input type="password" placeholder="Password">
+          <input type="password" placeholder="Password" ng-model="password">
         </md-input-container>
       </md-content>
       <div class="md-actions" layout="row" layout-align="end">
-        <md-button class="md-primary" ng-click="register()">
+        <md-button class="md-primary" ng-click="goRegister()">
           Sign Up
         </md-button>
-        <md-button class="md-raised md-primary" ng-click="login()">
+        <md-button class="md-raised md-primary" ng-click="authenticate()">
           Sign In
         </md-button>
       </div>
