--- a/views/register.html
+++ b/views/register.html
@@ -8,26 +8,26 @@
     </div>
   </md-toolbar>
   <md-card-content>
-    <form>
+    <form ng-submit="register()">
       <md-content>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-          <input type="text" placeholder="Username">
+          <input type="text" placeholder="Username" ng-model="username">
         </md-input-container>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_email_black_24px.svg"></md-icon>
-          <input type="email" placeholder="Email">
+          <input type="email" placeholder="Email" ng-model="email">
         </md-input-container>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
-          <input type="password" placeholder="Password">
+          <input type="password" placeholder="Password" ng-model="password">
         </md-input-container>
       </md-content>
       <div class="md-actions" layout="row" layout-align="end">
-        <md-button class="md-raised md-primary" ng-click="login()">
+        <md-button type="submit" class="md-raised md-primary">
           Sign Up
         </md-button>
-        <md-button class="md-primary" ng-click="goBackLogin()">
+        <md-button class="md-primary" ng-click="goLogin()">
           Sign In
         </md-button>
       </div>
