Changes with boards and cards in AngularJS controller and factory

--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,10 @@ md-toolbar-tools {
   height: 100%;
 }
 
+.list {
+  overflow: auto;
+}
+
 .ready, .paused, .done {
   background-color: rgba(96, 125, 139, 0.2);
 }
