--- a/views/kanban.html
+++ b/views/kanban.html
@@ -36,7 +36,12 @@
     <!-- Left sidenav -->
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
       <md-toolbar class="md-theme-light">
-        <h1 class="md-toolbar-tools">User information</h1>
+        <h1 class="md-toolbar-tools">My kanban boards</h1>
+        <md-list class='list'>
+          <md-card class='left-card' ng-repeat='board in boards'>
+            <md-card-content ng-bind='board.name'></md-card-content>
+          </md-card>
+        </md-list>
       </md-toolbar>
     </md-sidenav>
     <!-- Ready cards -->
@@ -44,7 +49,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='ready-title'>
         <h3>To do</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='readyCards' scroll-glue>
+      <md-list class='list' dragula="'first-bag'" dragula-model='readyCards'>
         <md-card class='ready-card' ng-repeat='card in readyCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -55,7 +60,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='inprogress-title'>
         <h3>In progress</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='inprogressCards' scroll-glue>
+      <md-list class='list' dragula="'first-bag'" dragula-model='inprogressCards'>
         <md-card class='inprogress-card' ng-repeat='card in inprogressCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -66,7 +71,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='paused-title'>
         <h3>Paused</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='pausedCards' scroll-glue>
+      <md-list class='list' dragula="'first-bag'" dragula-model='pausedCards'>
         <md-card class='paused-card' ng-repeat='card in pausedCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -77,7 +82,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='testing-title'>
         <h3>Testing</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='testingCards' scroll-glue>
+      <md-list class='list' dragula="'first-bag'" dragula-model='testingCards'>
         <md-card class='testing-card' ng-repeat='card in testingCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -88,7 +93,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='done-title'>
         <h3>Done</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='doneCards' scroll-glue>
+      <md-list class='list' dragula="'first-bag'" dragula-model='doneCards'>
         <md-card class='done-card' ng-repeat='card in doneCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
