--- a/views/kanban.html
+++ b/views/kanban.html
@@ -12,7 +12,7 @@
       </h2>
       <span flex></span>
       <!-- Add new card -->
-      <md-button class="md-icon-button" aria-label="AddNewCard" ng-click="AddNewCardDialog($event)">
+      <md-button class="md-icon-button" aria-label="AddNewCard" ng-click="addNewCardDialog($event)">
         <md-icon md-svg-icon="img/icons/ic_add_white_24px.svg"></md-icon>
       </md-button>
       <!-- Options menu -->
@@ -34,22 +34,28 @@
   </md-toolbar>
   <md-content id="kanbanlayout" layout="row" layout-xs="column">
     <!-- Left sidenav -->
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
+    <md-sidenav class="md-sidenav-left" md-component-id="left">
       <md-toolbar class="md-theme-light">
         <h1 class="md-toolbar-tools">My kanban boards</h1>
-        <md-list class='list'>
-          <md-card class='left-card' ng-repeat='board in boards'>
-            <md-card-content ng-bind='board.name'></md-card-content>
-          </md-card>
-        </md-list>
       </md-toolbar>
+      <md-content>
+        <md-list>
+          <md-list-item class="md-3-line" ng-repeat="board in boards" ng-click='toggleLeft()'>
+            <div class="md-list-item-text">
+              <h3 ng-bind='board.name'></h3>
+              <p ng-bind='board.description'></p>
+            </div>
+            <md-divider ng-if="!$last"></md-divider>
+          </md-list-item>
+        </md-list>
+      </md-content>
     </md-sidenav>
     <!-- Ready cards -->
     <div flex-gt-xs="25" class='ready'>
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='ready-title'>
         <h3>To do</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='readyCards'>
+      <md-list class='list kanban-list' dragula="'first-bag'" dragula-model='readyCards'>
         <md-card class='ready-card' ng-repeat='card in readyCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -60,7 +66,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='inprogress-title'>
         <h3>In progress</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='inprogressCards'>
+      <md-list class='list kanban-list' dragula="'first-bag'" dragula-model='inprogressCards'>
         <md-card class='inprogress-card' ng-repeat='card in inprogressCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -71,7 +77,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='paused-title'>
         <h3>Paused</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='pausedCards'>
+      <md-list class='list kanban-list' dragula="'first-bag'" dragula-model='pausedCards'>
         <md-card class='paused-card' ng-repeat='card in pausedCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -82,7 +88,7 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='testing-title'>
         <h3>Testing</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='testingCards'>
+      <md-list class='list kanban-list' dragula="'first-bag'" dragula-model='testingCards'>
         <md-card class='testing-card' ng-repeat='card in testingCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
@@ -93,41 +99,41 @@
       <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='done-title'>
         <h3>Done</h3>
       </md-whiteframe>
-      <md-list class='list' dragula="'first-bag'" dragula-model='doneCards'>
+      <md-list class='list kanban-list' dragula="'first-bag'" dragula-model='doneCards'>
         <md-card class='done-card' ng-repeat='card in doneCards'>
           <md-card-content ng-bind='card.content'></md-card-content>
         </md-card>
       </md-list>
     </div>
-  </div>
-  <!-- Custom dialog -->
-  <script type='text/ng-template' id='dialog1.tmpl.html'>
-    <md-dialog aria-label="Nueva tarjeta" ng-cloak>
-      <form>
-      <md-toolbar>
-        <div class="md-toolbar-tools">
-          <h2>New task</h2>
-          <span flex></span>
-          <md-button class="md-icon-button" ng-click="cancel()">
-            <md-icon md-svg-src="img/icons/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
+    <!-- Custom dialog -->
+    <script type='text/ng-template' id='dialog1.tmpl.html'>
+      <md-dialog aria-label="Nueva tarjeta" ng-cloak>
+        <form>
+        <md-toolbar>
+          <div class="md-toolbar-tools">
+            <h2>New task</h2>
+            <span flex></span>
+            <md-button class="md-icon-button" ng-click="cancel()">
+              <md-icon md-svg-src="img/icons/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
+            </md-button>
+          </div>
+        </md-toolbar>
+        <md-dialog-content style="max-width:800px;max-height:810px;min-width:300px;min-height:100px">
+          <div class="md-dialog-content">
+            <md-content layout-padding class="autoScroll">
+              <md-input-container class="md-block">
+                <input type="text" ng-model="inputDialog.description" placeholder="Description">
+              </md-input-container>
+            </md-content>
+          </div>
+        </md-dialog-content>
+        <div class="md-actions" layout="row">
+          <md-button class="md-raised md-primary" ng-click="answer()">
+            OK
           </md-button>
         </div>
-      </md-toolbar>
-      <md-dialog-content style="max-width:800px;max-height:810px;min-width:300px;min-height:100px">
-        <div class="md-dialog-content">
-          <md-content layout-padding class="autoScroll">
-            <md-input-container class="md-block">
-              <input type="text" ng-model="inputDialog.description" placeholder="Description">
-            </md-input-container>
-          </md-content>
-        </div>
-      </md-dialog-content>
-      <div class="md-actions" layout="row">
-        <md-button class="md-raised md-primary" ng-click="answer()">
-          OK
-        </md-button>
-      </div>
-      </form>
-    </md-dialog>
-  </script>
-</md-content>
+        </form>
+      </md-dialog>
+    </script>
+  </md-content>
+</div>
