--- a/views/login.html
+++ b/views/login.html
@@ -12,11 +12,11 @@
       <md-content>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-          <input type="text" placeholder="Username" ng-model="username">
+          <input type="text" placeholder="Username" ng-model="username" required>
         </md-input-container>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
-          <input type="password" placeholder="Password" ng-model="password">
+          <input type="password" placeholder="Password" ng-model="password" required>
         </md-input-container>
       </md-content>
       <div class="md-actions" layout="row" layout-align="end">
