--- a/views/register.html
+++ b/views/register.html
@@ -12,15 +12,15 @@
       <md-content>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-          <input type="text" placeholder="Username" ng-model="username">
+          <input type="text" placeholder="Username" ng-model="username" required>
         </md-input-container>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_email_black_24px.svg"></md-icon>
-          <input type="email" placeholder="Email" ng-model="email">
+          <input type="email" placeholder="Email" ng-model="email" required>
         </md-input-container>
         <md-input-container class="md-block">
           <md-icon md-svg-src="img/icons/ic_lock_black_24px.svg"></md-icon>
-          <input type="password" placeholder="Password" ng-model="password">
+          <input type="password" placeholder="Password" ng-model="password" required>
         </md-input-container>
       </md-content>
       <div class="md-actions" layout="row" layout-align="end">
