Using angular material prompt dialogs

--- a/views/kanban.html
+++ b/views/kanban.html
@@ -29,12 +29,12 @@
   </md-toolbar>
   <md-content id="kanbanlayout" layout="row" layout-xs="column">
     <!-- Add new card -->
-    <md-button class='md-fab md-fab-bottom-right my-fab-button' ng-click="addNewCardDialog($event)">
+    <md-button class='md-fab md-fab-bottom-right my-fab-button' ng-click="addNewCardDialog($event)" aria-label="add card">
       <md-icon md-svg-icon="img/icons/ic_add_white_24px.svg"></md-icon>
     </md-button>
     <!-- Left sidenav -->
     <md-sidenav class="md-sidenav-left" md-component-id="left">
-      <md-button class='md-fab md-fab-bottom-right my-fab-button' ng-click="addNewBoardDialog($event)">
+      <md-button class='md-fab md-fab-bottom-right my-fab-button' ng-click="addNewBoardDialog($event)" aria-label="add board">
         <md-icon md-svg-icon="img/icons/ic_add_white_24px.svg"></md-icon>
       </md-button>
       <md-toolbar class="md-theme-light" layout="row">
@@ -159,101 +159,5 @@
         </md-card>
       </md-list>
     </div>
-
-    <!-- Create card dialog -->
-    <script type='text/ng-template' id='cardDialog.tmpl.html'>
-      <md-dialog aria-label="New card" ng-cloak>
-        <form>
-        <md-toolbar>
-          <div class="md-toolbar-tools">
-            <h2>New card</h2>
-            <span flex></span>
-            <md-button class="md-icon-button" ng-click="cancel()">
-              <md-icon md-svg-src="img/icons/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
-            </md-button>
-          </div>
-        </md-toolbar>
-        <md-dialog-content style="max-width:800px;max-height:810px;min-width:300px;min-height:100px">
-          <div class="md-dialog-content">
-            <md-content layout-padding class="autoScroll">
-              <md-input-container class="md-block">
-                <input type="text" ng-model="inputDialog.description" placeholder="Description" required>
-              </md-input-container>
-            </md-content>
-          </div>
-        </md-dialog-content>
-        <div class="md-actions" layout="row">
-          <md-button ng-click="answer()">
-            OK
-          </md-button>
-        </div>
-        </form>
-      </md-dialog>
-    </script>
-
-    <!-- Create board dialog -->
-    <script type='text/ng-template' id='boardDialog.tmpl.html'>
-      <md-dialog aria-label="New board" ng-cloak>
-        <form>
-        <md-toolbar>
-          <div class="md-toolbar-tools">
-            <h2>New board</h2>
-            <span flex></span>
-            <md-button class="md-icon-button" ng-click="cancel()">
-              <md-icon md-svg-src="img/icons/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
-            </md-button>
-          </div>
-        </md-toolbar>
-        <md-dialog-content style="max-width:600px;max-height:400px;min-width:300px;min-height:200px">
-          <div class="md-dialog-content">
-            <md-content layout-padding class="autoScroll">
-              <md-input-container class="md-block">
-                <input type="text" ng-model="inputDialog.name" placeholder="Name" required>
-              </md-input-container>
-              <md-input-container class="md-block">
-                <input type="text" ng-model="inputDialog.description" placeholder="Description" required>
-              </md-input-container>
-            </md-content>
-          </div>
-        </md-dialog-content>
-        <div class="md-actions" layout="row">
-          <md-button ng-click="answer()">
-            OK
-          </md-button>
-        </div>
-        </form>
-        </md-dialog>
-      </script>
-
-      <!-- Edit card dialog -->
-      <script type='text/ng-template' id='editCardDialog.tmpl.html'>
-        <md-dialog aria-label="Edit card" ng-cloak>
-          <form>
-          <md-toolbar>
-            <div class="md-toolbar-tools">
-              <h2>Edit card</h2>
-              <span flex></span>
-              <md-button class="md-icon-button" ng-click="cancel()">
-                <md-icon md-svg-src="img/icons/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
-              </md-button>
-            </div>
-          </md-toolbar>
-          <md-dialog-content style="max-width:800px;max-height:810px;min-width:300px;min-height:100px">
-            <div class="md-dialog-content">
-              <md-content layout-padding class="autoScroll">
-                <md-input-container class="md-block">
-                  <input type="text" ng-model="inputDialog.description" placeholder="Description" required>
-                </md-input-container>
-              </md-content>
-            </div>
-          </md-dialog-content>
-          <div class="md-actions" layout="row">
-            <md-button ng-click="answer()">
-              OK
-            </md-button>
-          </div>
-          </form>
-        </md-dialog>
-      </script>
   </md-content>
 </div>
